Added APIs related to purchasing and payment
